# ettercap

include/: ec_decode.h  ec_dissect.h  ec_lua.h
src/: ec_dissect.c  ec_main.c
src/dissectors/: ec_smtp.c
src/lua/: CMakeLists.txt  ec_lua.c  ec_lua_dissect.c
src/lua/include/: ec_lua_dissector.h  ec_lua_main.h
src/lua/share/: CMakeLists.txt  init.lua.in
src/lua/share/core/: CMakeLists.txt  ettercap_dissect.lua  ettercap_ffi.lua
src/lua/share/dissectors/: smtp.lua
